Fixed an issue where images in the crop example would be squished when height exceeded height of image box - solved through responsive image scaling.

--- a/dev/stylus/fixes.styl
+++ b/dev/stylus/fixes.styl
@@ -1,9 +1,8 @@
 /*
- * temp fixes
+ * fixes
  */
 #app > div
   flex-grow 1
-  
   
 form#form 
   > div
@@ -45,9 +44,6 @@ form#form
 .template img
   border 1px solid #ccc
 
-
-
-// fixxx
 #form
   flex-basis 20%
   
@@ -82,16 +78,11 @@ form#form
 #crop_form
   padding 0 1em 0 0
 
-
-
 #init-crop
-  // background-image url('/assets/images/crop.png')
-  // background-size cover
   width 68px
   height 68px
   padding 0
   margin 50px 0 0 0
-  // background-color #000 !important;
   border 1px solid red
   color #fff
   cursor pointer
@@ -110,10 +101,17 @@ form#form
     border 1px solid purple !important
     max-width 600px
     max-height 600px
-    // valign()
+    valign()
 
     img
-      width 100%
-      max-width 600px
+      max-width 100%
+      max-height 100%
       height auto
-      max-height 600px
+      width auto
+      
+.full
+  width 100%
+  clear both
+
+#upload
+  float right
